crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__gra.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Eve",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Sue",
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": "Colin",
            "role": "Investigator",
            "speaker_code": "COL"
          },
          {
            "name": "Richard",
            "role": "Investigator",
            "speaker_code": "RIC"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;06.",
        "corpus": "brown",
        "language": "eng",
        "role": "Target_Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "brown",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "brown",
        "language": "eng",
        "role": "Investigator",
        "speaker": "COL",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "brown",
        "language": "eng",
        "role": "Investigator",
        "speaker": "RIC",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "15-OCT-1962",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "simplest gra",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Cmp",
                    "S1"
                  ],
                  "lemma": "more",
                  "pos": "adj"
                }
              },
              {
                "main": {
                  "lemma": "cookie",
                  "pos": "noun"
                }
              }
            ],
            "terminator": ".",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 2,
                "index": 1,
                "relation": "AMOD"
              },
              {
                "head": 0,
                "index": 2,
                "relation": "ROOT"
              },
              {
                "head": 2,
                "index": 3,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "more",
                  "type": "text"
                }
              ],
              "raw_text": "more",
              "span": {
                "end": 344,
                "start": 340
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "cookie",
                  "type": "text"
                }
              ],
              "raw_text": "cookie",
              "span": {
                "end": 351,
                "start": 345
              },
              "type": "word"
            }
          ],
          "postcodes": [
            {
              "text": "IMP"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "with postclitic",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "wheres",
                  "pos": "adv"
                }
              },
              {
                "main": {
                  "features": [
                    "Prs",
                    "Gen",
                    "S2"
                  ],
                  "lemma": "your",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "lemma": "cup",
                  "pos": "noun"
                }
              }
            ],
            "terminator": "?",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 3,
                "index": 2,
                "relation": "NMOD-POSS"
              },
              {
                "head": 1,
                "index": 3,
                "relation": "NSUBJ"
              },
              {
                "head": 1,
                "index": 4,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "where's",
                  "type": "text"
                }
              ],
              "raw_text": "where's",
              "span": {
                "end": 471,
                "start": 464
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "your",
                  "type": "text"
                }
              ],
              "raw_text": "your",
              "span": {
                "end": 476,
                "start": 472
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "cup",
                  "type": "text"
                }
              ],
              "raw_text": "cup",
              "span": {
                "end": 480,
                "start": 477
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "with compound",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "icecream",
                  "pos": "noun"
                }
              }
            ],
            "terminator": ".",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "ice",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 615,
                      "start": 614
                    }
                  },
                  "type": "compound_marker"
                },
                {
                  "content": "cream",
                  "type": "text"
                }
              ],
              "raw_text": "ice+cream",
              "span": {
                "end": 620,
                "start": 611
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "with compound and postclitic",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Prs",
                    "Nom",
                    "S2"
                  ],
                  "lemma": "you",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "lemma": "gonna",
                  "pos": "adv"
                }
              },
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Pres",
                    "S2"
                  ],
                  "lemma": "put",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "features": [
                    "Def",
                    "Art"
                  ],
                  "lemma": "the",
                  "pos": "det"
                }
              },
              {
                "main": {
                  "lemma": "choochoo",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "features": [
                    "Acc"
                  ],
                  "lemma": "wheel",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "lemma": "on",
                  "pos": "adp"
                }
              }
            ],
            "terminator": "?",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 3,
                "index": 1,
                "relation": "NSUBJ"
              },
              {
                "head": 3,
                "index": 2,
                "relation": "ADVMOD"
              },
              {
                "head": 0,
                "index": 3,
                "relation": "ROOT"
              },
              {
                "head": 6,
                "index": 4,
                "relation": "DET"
              },
              {
                "head": 6,
                "index": 5,
                "relation": "COMPOUND"
              },
              {
                "head": 3,
                "index": 6,
                "relation": "OBJ"
              },
              {
                "head": 3,
                "index": 7,
                "relation": "ADVMOD"
              },
              {
                "head": 3,
                "index": 8,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "span": {
                "end": 718,
                "start": 715
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "gonna",
                  "type": "text"
                }
              ],
              "raw_text": "gonna",
              "span": {
                "end": 724,
                "start": 719
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "put",
                  "type": "text"
                }
              ],
              "raw_text": "put",
              "span": {
                "end": 728,
                "start": 725
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "span": {
                "end": 732,
                "start": 729
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "choo",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 738,
                      "start": 737
                    }
                  },
                  "type": "compound_marker"
                },
                {
                  "content": "choo's",
                  "type": "text"
                }
              ],
              "raw_text": "choo+choo's",
              "span": {
                "end": 744,
                "start": 733
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "wheel",
                  "type": "text"
                }
              ],
              "raw_text": "wheel",
              "span": {
                "end": 750,
                "start": 745
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "on",
                  "type": "text"
                }
              ],
              "raw_text": "on",
              "span": {
                "end": 753,
                "start": 751
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;06.",
        "corpus": "brown",
        "language": "eng",
        "role": "Target_Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": "Eve",
      "role": "Target_Child"
    },
    "COL": {
      "birth_date": null,
      "code": "COL",
      "id": {
        "corpus": "brown",
        "language": "eng",
        "role": "Investigator",
        "speaker": "COL"
      },
      "name": "Colin",
      "role": "Investigator"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "brown",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": "Sue",
      "role": "Mother"
    },
    "RIC": {
      "birth_date": null,
      "code": "RIC",
      "id": {
        "corpus": "brown",
        "language": "eng",
        "role": "Investigator",
        "speaker": "RIC"
      },
      "name": "Richard",
      "role": "Investigator"
    }
  }
}
