crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__groups-phonological.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "fra"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "fra"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;06.",
        "corpus": "corpus",
        "language": [
          "fra"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "fra"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Phonological groups on main tier using angle brackets",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: main_pho_group, pho_begin_group, pho_end_group",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "non",
              "content": [
                {
                  "content": "non",
                  "type": "text"
                }
              ],
              "raw_text": "non",
              "type": "word"
            },
            {
              "content": {
                "content": [
                  {
                    "cleaned_text": "il",
                    "content": [
                      {
                        "content": "il",
                        "type": "text"
                      }
                    ],
                    "raw_text": "il",
                    "type": "word"
                  },
                  {
                    "cleaned_text": "y",
                    "content": [
                      {
                        "content": "y",
                        "type": "text"
                      }
                    ],
                    "raw_text": "y",
                    "type": "word"
                  },
                  {
                    "cleaned_text": "a",
                    "content": [
                      {
                        "content": "a",
                        "type": "text"
                      }
                    ],
                    "raw_text": "a",
                    "type": "word"
                  }
                ]
              },
              "type": "pho_group"
            },
            {
              "cleaned_text": "pas",
              "content": [
                {
                  "content": "pas",
                  "type": "text"
                }
              ],
              "raw_text": "pas",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              "d",
              "e",
              "f"
            ],
            "tier_type": "Mod"
          },
          "type": "Mod"
        },
        {
          "data": {
            "items": [
              "a",
              "b",
              "c"
            ],
            "tier_type": "Pho"
          },
          "type": "Pho"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "cleaned_text": "A",
                    "content": [
                      {
                        "content": "A",
                        "type": "text"
                      }
                    ],
                    "raw_text": "A",
                    "type": "word"
                  }
                ]
              },
              "type": "pho_group"
            },
            {
              "cleaned_text": "B",
              "content": [
                {
                  "content": "B",
                  "type": "text"
                }
              ],
              "raw_text": "B",
              "type": "word"
            },
            {
              "cleaned_text": "C",
              "content": [
                {
                  "content": "C",
                  "type": "text"
                }
              ],
              "raw_text": "C",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "2;06.",
        "corpus": "corpus",
        "language": [
          "fra"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "fra"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
